regression/fail/modules.22.sml
structure S:
   sig
      val x: 'a list
   end =
   struct
      val x: unit list = []
   end
